[gd_scene load_steps=4 format=3 uid="uid://d0ymxfeme5luf"]

[ext_resource type="Script" path="res://paint_detector.gd" id="1_ga385"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u62e5"]
size = Vector2(80, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1viq"]
size = Vector2(80, 80)

[node name="InkDetector" type="Node2D"]
script = ExtResource("1_ga385")

[node name="Area2D" type="Area2D" parent="." groups=["white_tiles"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_u62e5")

[node name="StaticBody2D" type="RigidBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_k1viq")
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
